--- a/history
+++ b/history
@@ -872,3 +872,260 @@ env
 unset NAME
 env
 exit
+<hello
+ls
+exit
+<hello
+exit
+<hello
+exit
+<missing
+exit
+<missing
+exit
+<missing
+$?
+exit
+<missing
+$?
+ls
+ls | ls
+exit
+Apple_PubSub_Socket_Render=/private/tmp/com.apple.launchd.5hbu36WfNM/Render
+COLORFGBG='7;0'
+COLORTERM=truecolor
+COMMAND_MODE=unix2003
+HOME=/Users/lkonttin
+ITERM_PROFILE=Default
+ITERM_SESSION_ID=w1t0p0:A8BC2343-1E8C-416C-9D10-7BA8D85FF5B2
+LANG=en_US.UTF-8
+LC_TERMINAL=iTerm2
+LC_TERMINAL_VERSION=3.4.16
+LOGNAME=lkonttin
+MAIL=lkonttin@student.hive.fi
+OLDPWD=/Users/lkonttin/minishell/minishell_tester
+PATH=/Users/lkonttin/.brew/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/munki
+PROMPT='%S%B%F{yellow}[%m]% %f %c/%b %{%F{green}%}$(parse_git_branch) %{%f%s%} $>'
+PWD=/Users/lkonttin/minishell
+SECURITYSESSIONID=186a8
+SHELL=/bin/zsh
+SHLVL=1
+SSH_AUTH_SOCK=/private/tmp/com.apple.launchd.CkclN6jxWc/Listeners
+TERM=xterm-256color
+TERM_PROGRAM=iTerm.app
+TERM_PROGRAM_VERSION=3.4.16
+TERM_SESSION_ID=w1t0p0:A8BC2343-1E8C-416C-9D10-7BA8D85FF5B2
+TMPDIR=/var/folders/zz/zyxvpxvq6csfxvn_n0000p_w0005kq/T/
+USER=lkonttin
+XPC_FLAGS=0x0
+XPC_SERVICE_NAME=0
+__CF_USER_TEXT_ENCODING=0x0:0:0
+Makefile
+array_utils.c
+array_utils.o
+builtins.c
+builtins.o
+builtins_2.c
+builtins_2.o
+debug.c
+debug.o
+error.c
+error.o
+execute.c
+execute.o
+expand.c
+expand.o
+free.c
+free.o
+heredoc.c
+heredoc.o
+history
+init.c
+init.o
+libft
+minishell
+minishell.c
+minishell.h
+minishell.o
+minishell_tester
+parse_cmd_n_args.c
+parse_cmd_n_args.o
+parse_redirs.c
+parse_redirs.o
+parse_utils.c
+parse_utils.o
+parser.c
+parser.o
+paths.c
+paths.o
+pipe_split.c
+pipe_split.o
+pipes.c
+pipes.o
+redirection.c
+redirection.o
+signals.c
+signals.o
+hi
+echo hi
+echo ls | ./minishell
+ls
+exit
+echo ls | ./minishell
+ls
+exit
+ls
+export NAME=Lassi
+askldklasd
+echo "hello
+echo "h
+echo "h
+echo "h
+echo "h
+echo "h
+echo "h
+cat
+ls |
+ls |
+exit
+cat <<eof
+exit
+$EMPTY
+$?
+"$EMPTY
+echo "hi
+exit
+"$EMPTY
+exit
+"$EMPTY
+"$EMPTY
+"$EMPTY
+"$EMPTY
+"$EMPTY
+"$EMPTY
+"$EMPTY
+"$EMPTY
+"$EMPTY
+"$EMPTY
+"$EMPTY
+"
+"
+"
+""
+""
+'
+'
+'
+'
+'
+'
+"
+""
+"
+"
+"
+'
+'
+ls
+'
+"
+"
+ls
+"
+ls
+"
+"
+ls
+"
+"
+ls
+"
+"
+"
+"
+"
+ls
+"
+"
+echo hi
+"
+"
+echo hi
+"
+"
+echo hi
+"
+"
+echo hi
+"
+"
+echi hi
+"
+"
+echo hi
+"
+"
+ls
+"
+"
+ls
+"
+"
+ls
+"
+"
+ls
+"
+"
+"
+"
+"
+exit
+exit
+exit
+exit
+exit
+export 123
+env
+export NAME=Lassi
+env
+unset Name
+env
+unset NAME
+env
+export 123
+cd 123123
+cd  1232
+cd minishell_tester
+cd ..
+cd askd
+cd 1233
+cd 23232
+cd 2342424
+exit
+cd 24244
+cc 2424
+cd 343434
+cd 242424
+cd 353535
+cd 353535
+cd 353535
+cd 353535
+cd 353535
+cd 353535
+cd 353535
+cd 5353535
+cd 5353535
+cd 124
+cd 124
+cd 124
+cd 123123
+cd 123123
+exit
+cd 123123
+cd 123
+exit
+cd 123
+exit
+env
+exit
